test/e2e/testdata/wasm-http-tls.yaml
---
apiVersion: v1
kind: Secret
metadata:
  name: wasm-http-tls-server-secret
  namespace: gateway-conformance-infra
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURuVENDQW9XZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREF0TVJVd0V3WURWUVFLREF4bGVHRnQKY0d4bElFbHVZeTR4RkRBU0JnTlZCQU1NQzJWNFlXMXdiR1V1WTI5dE1CNFhEVEkxTURFd056RXpNVEF5TTFvWApEVE0xTURFd05URXpNVEF5TTFvd1ZqRTFNRE1HQTFVRUF3d3NjbVZ0YjNSbExXcDNhM010YzJWeWRtVnlMbWRoCmRHVjNZWGt0WTI5dVptOXliV0Z1WTJVdGFXNW1jbUV4SFRBYkJnTlZCQW9NRkdWNFlXMXdiR1VnYjNKbllXNXAKZW1GMGFXOXVNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTJFRGFxMXpWaVE1dwpJMGNTVjNJS1lMelRCQ [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRRFlRTnFyWE5XSkRuQWoKUnhKWGNncGd2Tk1FQlA2aTBhcFFjbUV1eGt4SXVxd211OVFJblMrVEcweUhHUTQvaUpxNUVBV0Y2RUQyVFBHaQp6MnBQYmZvbjhKMTZwZ1hROXVYMDlqSzRLaC9BU0FYVEY1MnhPWVNIV0p6RWxVM1VxUjhrd3h4MWNaelltNHlXCkFsRjUrajMrRk4rNXBuTTJwKy9Dc0NjNjlWYWw3Nmg0K1hmMkdDVWJoWkw5cGRzMkIwc2VWSDVCNFFvcXdlOHoKTnlUUzNnYzdhWTg0dS9BWWpOb3h1dGpLK0hOeWNNMXA5WERjT2tPNmpiRk5uVldmUEhPZHFVdnpSbVRZTi9TSQp2bnpTbjUwMDl5V25MK [...]
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: wasm-http-tls-server-ca
  namespace: gateway-conformance-infra
data:
  ca.crt: |
    -----BEGIN CERTIFICATE-----
    MIIDOzCCAiOgAwIBAgIUYozfdHNlpdxcE7TCuF+wDOrxi9kwDQYJKoZIhvcNAQEL
[...]
    vjYDV/+uv3wEkMby25WT
    -----END CERTIFICATE-----
---
apiVersion: v1
kind: Service
metadata:
  name: remote-jwks-server
  namespace: gateway-conformance-infra
spec:
  selector:
    app: wasm-http-tls-server
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wasm-http-tls-server
  namespace: gateway-conformance-infra
  labels:
    app: wasm-http-tls-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wasm-http-tls-server
  template:
    metadata:
      labels:
        app: wasm-http-tls-server
    spec:
      containers:
        - name: wasm-http-tls-server
          image: envoyproxy/gateway-static-file-server
          imagePullPolicy: IfNotPresent
          args:
            - --port=8443
            - --certPath=/etc/certs
          volumeMounts:
            - name: wasm-http-tls-server-secret
              mountPath: /etc/certs
      volumes:
        - name: wasm-http-tls-server-secret
          secret:
            secretName: wasm-http-tls-server-secret
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-wasm-http-tls
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  hostnames: ["www.example.com"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /wasm-http-tls
    backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyExtensionPolicy
metadata:
  name: wasm-http-tls-test
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: http-with-wasm-http-tls
  wasm:
  - name: wasm-filter
    rootID: my_root_id
    code:
      type: HTTP
      http:
        url: https://remote-jwks-server.gateway-conformance-infra/wasm/envoy_filter_http_wasm_example.wasm
        sha256: 79c9f85128bb0177b6511afa85d587224efded376ac0ef76df56595f1e6315c0
        tls:
          caCertificateRef:
            name: wasm-http-tls-server-ca
            group: ''
            kind: ConfigMap
